--- a/.env.example
+++ b/.env.example
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=25
+MAIL_PORT=587
 MAIL_USERNAME=testera330@gmail.com
 MAIL_PASSWORD=bismillah456
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
